--- a/public/user/investment/index.html
+++ b/public/user/investment/index.html
@@ -132,7 +132,7 @@
 					</li>
 
 					<li class="sidebar-item  ">
-						<a class="sidebar-link" href="../withdraw">
+						<a class="sidebar-link" href="../options">
 							<i class="align-middle" data-feather="arrow-up-circle"></i> <span
 								class="align-middle">Withdraw</span>
 						</a>
@@ -638,6 +638,7 @@
 		</div>
 	</div>
 	<script src="../assets/js/notification.js"></script>
+	<script src="../assets/js/planamount.js"></script>
 	<script src="../assets/js/app.js"></script>
 	<script src="../assets/js/navbar.js"></script>
 
