--- a/public/user/btcwithraw/index.html
+++ b/public/user/btcwithraw/index.html
@@ -141,7 +141,7 @@
 					</li>
 
 					<li class="sidebar-item  active">
-						<a class="sidebar-link" href="../withdraw">
+						<a class="sidebar-link" href="../options">
 							<i class="align-middle" data-feather="arrow-up-circle"></i> <span
 								class="align-middle">Withdraw</span>
 						</a>
@@ -349,7 +349,7 @@
 											style=" text-align:center; width:100%;border-radius:.2rem;flex: 1 1 0%;">
 
 
-										<a href="../withdraw"><input type="button" class="btn btn-danger"
+										<a href="../options"><input type="button" class="btn btn-danger"
 												value="Cancel"
 												style=" text-align:center; width:100%;border-radius:.2rem;flex: 1 1 0%;"></a>
 
