--- a/public/user/processing/index.html
+++ b/public/user/processing/index.html
@@ -144,7 +144,7 @@
 					</li>
 
 					<li class="sidebar-item ">
-						<a class="sidebar-link" href="../withdraw">
+						<a class="sidebar-link" href="../options">
 							<i class="align-middle" data-feather="arrow-up-circle"></i> <span
 								class="align-middle">Withdraw</span>
 						</a>
