--- a/public/user/admin/dashboard/index.html
+++ b/public/user/admin/dashboard/index.html
@@ -160,6 +160,11 @@
 							<i class="align-middle" data-feather="arrow-up-circle"></i> <span class="align-middle">Stop Client Investement</span>
 						</a>
 					</li>
+					<li class="sidebar-item ">
+						<a class="sidebar-link" href="../activate/">
+							<i class="align-middle" data-feather="arrow-up-circle"></i> <span class="align-middle">Active Withdraw From Main Balance</span>
+						</a>
+					</li>
 
 					<li class="sidebar-item ">
 						<a class="sidebar-link" href="../receipts">
