--- a/public/user/admin/investment/index.html
+++ b/public/user/admin/investment/index.html
@@ -153,6 +153,11 @@
 						</a>
 					</li>
 					<li class="sidebar-item ">
+						<a class="sidebar-link" href="../activate/">
+							<i class="align-middle" data-feather="arrow-up-circle"></i> <span class="align-middle">Active Withdraw From Main Balance</span>
+						</a>
+					</li>
+					<li class="sidebar-item ">
 						<a class="sidebar-link" href="../receipts">
 							<i class="align-middle" data-feather="arrow-up-circle"></i> <span
 								class="align-middle">See Receipts </span>
