--- a/public/user/admin/receipts/index.html
+++ b/public/user/admin/receipts/index.html
@@ -368,7 +368,7 @@
 											style=" text-align:center; width:100%;border-radius:.2rem;flex: 1 1 0%;">
 
 
-										<a href="../withdraw"><input type="button" class="btn btn-danger"
+										<a href="../options"><input type="button" class="btn btn-danger"
 												value="Cancel"
 												style=" text-align:center; width:100%;border-radius:.2rem;flex: 1 1 0%;"></a>
 
