--- a/public/user/depositebnb/index.html
+++ b/public/user/depositebnb/index.html
@@ -20,6 +20,9 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 	<link rel="canonical" href="dashboard.html" />
 
 	<title>Apex Corporate Investment Company/deposite </title>
