--- a/public/user/depositebtc/index.html
+++ b/public/user/depositebtc/index.html
@@ -15,6 +15,10 @@
   
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+	
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
 	<link rel="preconnect" href="../external.html?link=https://fonts.gstatic.com/">
 	<link rel="shortcut icon" href="../img/icons/icon-48x48.png" />
