--- a/public/user/depositeeth/index.html
+++ b/public/user/depositeeth/index.html
@@ -17,6 +17,9 @@
 	<link rel="preconnect" href="../external.html?link=https://fonts.gstatic.com/">
 	<link rel="shortcut icon" href="../img/icons/icon-48x48.png" />
 
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<link rel="canonical" href="dashboard.html" />
