--- a/public/user/usdtwithdraw/index.html
+++ b/public/user/usdtwithdraw/index.html
@@ -18,6 +18,10 @@
 	<link rel="shortcut icon" href="../img/icons/icon-48x48.png" />
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+	
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
 	<link rel="canonical" href="../dashboard" />
 
